; ModuleID = '/home/carl/AnghaBench/gb-studio/buildTools/win32-x64/gbdk/examples/gb/gb-dtmf/extr_gb-dtmf.c_init_cursor.c'
source_filename = "/home/carl/AnghaBench/gb-studio/buildTools/win32-x64/gbdk/examples/gb/gb-dtmf/extr_gb-dtmf.c_init_cursor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cursor_data = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @init_cursor() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @cursor_data, align 4
  %3 = call i32 @set_sprite_data(i32 23, i32 8, i32 %2)
  store i32 23, i32* %1, align 4
  br label %4

4:                                                ; preds = %11, %0
  %5 = load i32, i32* %1, align 4
  %6 = icmp sle i32 %5, 30
  br i1 %6, label %7, label %14

7:                                                ; preds = %4
  %8 = load i32, i32* %1, align 4
  %9 = load i32, i32* %1, align 4
  %10 = call i32 @set_sprite_tile(i32 %8, i32 %9)
  br label %11

11:                                               ; preds = %7
  %12 = load i32, i32* %1, align 4
  %13 = add nsw i32 %12, 1
  store i32 %13, i32* %1, align 4
  br label %4

14:                                               ; preds = %4
  ret void
}

declare dso_local i32 @set_sprite_data(i32, i32, i32) #1

declare dso_local i32 @set_sprite_tile(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
